# kubemq-cpp

./: .clang-format  .clang-tidy  .gitignore  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  COMPATIBILITY.md  CONTRIBUTING.md  Doxyfile  MIGRATION.md  README.md  SECURITY.md  TROUBLESHOOTING.md  conanfile.py  vcpkg.json
burnin/: CMakeLists.txt  burnin  burnin-config.yaml  main.cc
burnin/config/: config.cc  config.h  defaults.h
burnin/engine/: engine.cc  engine.h  metrics.cc  metrics.h
burnin/server/: handlers.cc  handlers.h  http_server.cc  http_server.h
burnin/worker/: commands.cc  commands.h  events.cc  events.h  events_store.cc  events_store.h  queries.cc  queries.h  queue_simple.cc  queue_simple.h  queue_stream.cc  queue_stream.h
cmake/: KubeMQConfig.cmake.in  KubeMQCppConfig.cmake.in  patch_string.cmake
examples/: CMakeLists.txt
examples/commands/: CMakeLists.txt
examples/commands/command_timeout/: CMakeLists.txt  main.cc
examples/commands/consumer_group/: CMakeLists.txt  main.cc
examples/commands/handle_command/: CMakeLists.txt  main.cc
examples/commands/send_command/: CMakeLists.txt  main.cc
examples/connection/: CMakeLists.txt
examples/connection/close/: CMakeLists.txt  main.cc
examples/connection/connect/: CMakeLists.txt  main.cc
examples/connection/custom_timeouts/: CMakeLists.txt  main.cc
examples/connection/ping/: CMakeLists.txt  main.cc
examples/connection/token_auth/: CMakeLists.txt  main.cc
examples/error_handling/: CMakeLists.txt
examples/error_handling/connection_error/: CMakeLists.txt  main.cc
examples/error_handling/graceful_shutdown/: CMakeLists.txt  main.cc
examples/error_handling/reconnection/: CMakeLists.txt  main.cc
examples/events/: CMakeLists.txt
examples/events/basic_pubsub/: CMakeLists.txt  main.cc
examples/events/cancel_subscription/: CMakeLists.txt  main.cc
examples/events/consumer_group/: CMakeLists.txt  main.cc
examples/events/multiple_subscribers/: CMakeLists.txt  main.cc
examples/events/stream_send/: CMakeLists.txt  main.cc
examples/events/wildcard_subscription/: CMakeLists.txt  main.cc
examples/events_store/: CMakeLists.txt
examples/events_store/cancel_subscription/: CMakeLists.txt  main.cc
examples/events_store/consumer_group/: CMakeLists.txt  main.cc
examples/events_store/persistent_pubsub/: CMakeLists.txt  main.cc
examples/events_store/replay_from_sequence/: CMakeLists.txt  main.cc
examples/events_store/replay_from_time/: CMakeLists.txt  main.cc
examples/events_store/start_at_time_delta/: CMakeLists.txt  main.cc
examples/events_store/start_from_first/: CMakeLists.txt  main.cc
examples/events_store/start_from_last/: CMakeLists.txt  main.cc
examples/events_store/start_new_only/: CMakeLists.txt  main.cc
examples/events_store/stream_send/: CMakeLists.txt  main.cc
examples/management/: CMakeLists.txt
examples/management/create_channel/: CMakeLists.txt  main.cc
examples/management/delete_channel/: CMakeLists.txt  main.cc
examples/management/list_channels/: CMakeLists.txt  main.cc
examples/management/purge_queue/: CMakeLists.txt  main.cc
examples/observability/: CMakeLists.txt
examples/observability/opentelemetry_setup/: CMakeLists.txt  main.cc
examples/patterns/: CMakeLists.txt
examples/patterns/fan_out/: CMakeLists.txt  main.cc
examples/patterns/request_reply/: CMakeLists.txt  main.cc
examples/patterns/work_queue/: CMakeLists.txt  main.cc
examples/queries/: CMakeLists.txt
examples/queries/cached_query/: CMakeLists.txt  main.cc
examples/queries/consumer_group/: CMakeLists.txt  main.cc
examples/queries/handle_query/: CMakeLists.txt  main.cc
examples/queries/send_query/: CMakeLists.txt  main.cc
examples/queues/: CMakeLists.txt
examples/queues/ack_all/: CMakeLists.txt  main.cc
examples/queues/ack_reject/: CMakeLists.txt  main.cc
examples/queues/batch_send/: CMakeLists.txt  main.cc
examples/queues/dead_letter_queue/: CMakeLists.txt  main.cc
examples/queues/delayed_messages/: CMakeLists.txt  main.cc
examples/queues/peek_messages/: CMakeLists.txt  main.cc
examples/queues/send_receive/: CMakeLists.txt  main.cc
examples/queues_stream/: CMakeLists.txt
examples/queues_stream/ack_range/: CMakeLists.txt  main.cc
examples/queues_stream/auto_ack/: CMakeLists.txt  main.cc
examples/queues_stream/dead_letter_policy/: CMakeLists.txt  main.cc
examples/queues_stream/delay_policy/: CMakeLists.txt  main.cc
examples/queues_stream/expiration_policy/: CMakeLists.txt  main.cc
examples/queues_stream/nack_all/: CMakeLists.txt  main.cc
examples/queues_stream/poll_mode/: CMakeLists.txt  main.cc
examples/queues_stream/requeue_all/: CMakeLists.txt  main.cc
examples/queues_stream/stream_receive/: CMakeLists.txt  main.cc
examples/queues_stream/stream_send/: CMakeLists.txt  main.cc
examples/tls/: CMakeLists.txt
examples/tls/mtls_setup/: CMakeLists.txt  main.cc
examples/tls/tls_setup/: CMakeLists.txt  main.cc
src/: client.cc  client_channels.cc  client_commands.cc  client_convenience.cc  client_events.cc  client_events_store.cc  client_options.cc  client_queries.cc  client_queues.cc  client_queues_stream.cc  command.cc  connection_state.cc  credential_provider.cc  error_code.cc  event.cc  event_store.cc  query.cc  queue_message.cc  status.cc  subscription_option.cc  tls_config.cc  (+2 more)
tests/: CMakeLists.txt
tests/benchmarks/: throughput_bench.cc
tests/integration/: auth_integration_test.cc  channels_integration_test.cc  commands_integration_test.cc  events_integration_test.cc  events_store_integration_test.cc  queries_integration_test.cc  queues_integration_test.cc  queues_stream_integration_test.cc  reconnection_integration_test.cc
tests/unit/: callback_guard_test.cc  client_test.cc  command_test.cc  converter_test.cc  error_mapper_test.cc  error_test.cc  event_store_test.cc  event_test.cc  grpc_transport_test.cc  message_buffer_test.cc  query_test.cc  queue_test.cc  reconnect_test.cc  retry_test.cc  state_machine_test.cc  status_or_test.cc  stream_handle_test.cc  test_helpers.h  tls_config_test.cc  uuid_test.cc  validation_test.cc
(+61 files in other folders)
