add_subdirectory(connection)
add_subdirectory(management)
add_subdirectory(events)
add_subdirectory(events_store)
add_subdirectory(queues)
add_subdirectory(queues_stream)
add_subdirectory(commands)
add_subdirectory(queries)
add_subdirectory(error_handling)
add_subdirectory(patterns)
add_subdirectory(observability)
add_subdirectory(tls)
