add_subdirectory(persistent_pubsub)
add_subdirectory(stream_send)
add_subdirectory(start_from_first)
add_subdirectory(start_from_last)
add_subdirectory(start_new_only)
add_subdirectory(replay_from_sequence)
add_subdirectory(replay_from_time)
add_subdirectory(start_at_time_delta)
add_subdirectory(consumer_group)
add_subdirectory(cancel_subscription)
