add_subdirectory(stream_send)
add_subdirectory(stream_receive)
add_subdirectory(ack_range)
add_subdirectory(auto_ack)
add_subdirectory(nack_all)
add_subdirectory(requeue_all)
add_subdirectory(poll_mode)
add_subdirectory(delay_policy)
add_subdirectory(expiration_policy)
add_subdirectory(dead_letter_policy)
