add_executable(example_commands_consumer_group main.cc)
target_link_libraries(example_commands_consumer_group PRIVATE kubemq_static)
target_compile_options(example_commands_consumer_group PRIVATE -Wall -Wextra -Wpedantic)
set_target_properties(example_commands_consumer_group PROPERTIES OUTPUT_NAME main)
