add_executable(example_commands_handle_command main.cc)
target_link_libraries(example_commands_handle_command PRIVATE kubemq_static)
target_compile_options(example_commands_handle_command PRIVATE -Wall -Wextra -Wpedantic)
set_target_properties(example_commands_handle_command PROPERTIES OUTPUT_NAME main)
