add_executable(example_error_handling_graceful_shutdown main.cc)
target_link_libraries(example_error_handling_graceful_shutdown PRIVATE kubemq_static)
target_compile_options(example_error_handling_graceful_shutdown PRIVATE -Wall -Wextra -Wpedantic)
set_target_properties(example_error_handling_graceful_shutdown PROPERTIES OUTPUT_NAME main)
