add_executable(example_events_multiple_subscribers main.cc)
target_link_libraries(example_events_multiple_subscribers PRIVATE kubemq_static)
target_compile_options(example_events_multiple_subscribers PRIVATE -Wall -Wextra -Wpedantic)
set_target_properties(example_events_multiple_subscribers PROPERTIES OUTPUT_NAME main)
