add_executable(example_events_store_consumer_group main.cc)
target_link_libraries(example_events_store_consumer_group PRIVATE kubemq_static)
target_compile_options(example_events_store_consumer_group PRIVATE -Wall -Wextra -Wpedantic)
set_target_properties(example_events_store_consumer_group PROPERTIES OUTPUT_NAME main)
