add_executable(example_events_store_stream_send main.cc)
target_link_libraries(example_events_store_stream_send PRIVATE kubemq_static)
target_compile_options(example_events_store_stream_send PRIVATE -Wall -Wextra -Wpedantic)
set_target_properties(example_events_store_stream_send PROPERTIES OUTPUT_NAME main)
